--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,10 @@ html.dark {
   height: 100vh;
 }
 
+.repl-terminal {
+  height: 100%;
+  max-height: 100%
+}
 .repl-terminal .xterm {
   padding: 0.75rem 1.5rem;
 }
