--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,9 +4,11 @@
   box-sizing: border-box;
 }
 
-html.dark {
+/* All page default to dark mode, no light mode */
+html {
   background: #121212;
   color: #fff;
+  color-scheme: dark;
 }
 
 #app {
@@ -15,10 +17,6 @@ html.dark {
   height: 100vh;
 }
 
-.repl-terminal {
-  height: 100%;
-  max-height: 100%
-}
 .repl-terminal .xterm {
   padding: 0.75rem 1.5rem;
 }
